Add FST Serialization and Kanzi compression in the main benchmark